--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Home 4 ThorsBro
+email: g@fontejon.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "dog-blog" # the subpath of your site, e.g. /blog
+  I started fostering a ThorsBro on 3/21. It is going to be
+  a welcoming challenge to find a "Forever Home" for this
+  young dog. ThorsBro is just a teenager with limited exposure.  
+  I'll try my best to help him out.
+baseurl: "/dog-blog" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: gfontejon
+github_username:  gfonk
 
 # Build settings
 theme: minima
